--- a/site.exemplo/index.html
+++ b/site.exemplo/index.html
@@ -9,5 +9,7 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p style="text-align: justify;"> A programação é apaixonante porque une criatividade e lógica de um jeito único: <br> com apenas algumas linhas de código, somos capazes de construir mundos, resolver <br> problemas complexos e transformar ideias em realidade. Ela oferece o prazer quase <br> instantâneo de ver algo ganhar vida, ao mesmo tempo em que desafia <br> constantemente a mente a pensar de forma estruturada e inovadora. </p>
+    <p style="text-align: justify;"> Ela oferece o prazer quase instantâneo de ver algo ganhar vida, ao mesmo tempo <br> em que desafia constantemente a mente a pensar de forma estruturada e inovadora. <br> É uma arte invisível que move o mundo moderno — dos aplicativos mais simples <br> aos sistemas que sustentam empresas inteiras — e proporciona uma sensação viciante <br> de conquista a cada erro resolvido, a cada funcionalidade implementada com sucesso.
+    </p>
 </body>
 </html>
